--- a/OpenWebMaven/src/main/resources/openadmin/languages/actions_es.properties
+++ b/OpenWebMaven/src/main/resources/openadmin/languages/actions_es.properties
@@ -3,6 +3,7 @@ new = Alta
 edit = Modifica
 delete = Elimina
 search = Busca
+copy= Copia
 # ___________________________        Ends Database Operation CRUD   ______________________________________________
 
 
