--- a/OpenWebMaven/src/main/resources/openadmin/languages/labels_ca.properties
+++ b/OpenWebMaven/src/main/resources/openadmin/languages/labels_ca.properties
@@ -22,12 +22,18 @@ ActionViewRole_menuItem = Menu ítem
 ActionViewRole_action = Acció
 ActionViewRole_role = Rol
 
+
 ######  Class ClassName
 ClassName = Classe
 ClassName_description = Nom classe
 
 ######  Class EntityAdm
-EntityAdm = Gestió conexió
+EntityAdm = Entitat
+EntityAdm_description = Descripció
+EntityAdm_conn = Connexió
+EntityAdm_icon = Icona
+EntityAdm_theme = Tema CSS
+EntityAdm_connhistoric = Connexio Històric
 
 ######  Class MenuItem 
 MenuItem = Gestió pantalles
