--- a/OpenWebMaven/src/main/resources/openadmin/languages/labels_es.properties
+++ b/OpenWebMaven/src/main/resources/openadmin/languages/labels_es.properties
@@ -28,7 +28,12 @@ ClassName = Clase
 ClassName_description = Nombre clase
 
 ######  Class EntityAdm
-EntityAdm = Gestión conexión
+EntityAdm = Entitat
+EntityAdm_description = Descripció
+EntityAdm_conn = Connexió
+EntityAdm_icon = Icona
+EntityAdm_theme = Tema CSS
+EntityAdm_connhistoric = Connexio Històric
 
 ######  Class MenuItem 
 MenuItem = Gestión pantallas
