--- a/OpenWebMaven/src/main/resources/openadmin/languages/generals_es.properties
+++ b/OpenWebMaven/src/main/resources/openadmin/languages/generals_es.properties
@@ -22,7 +22,13 @@ desplegar = Idiomas disponibles
 #################### Cap menu horizontal
 programEntity = Programas
 
+entities = Entidades
+
+town_hall =Ayuntamiento
+
 ######################## Programs #################################
+programs = Programas
+
 control = Control
 
 ######################## Fi Aplicacions #################################
@@ -31,15 +37,21 @@ control = Control
 
 #Menu lateral Control
 
-openadmin_model_control_administracion_default = Administracion
+#openadmin_model_control_administracion_default = Administracion
+openadmin_model_control_administracion_submenu = Administracion
+
 openadmin_model_control_access_default = Access
 openadmin_model_control_program_default = Programas
 openadmin_model_control_role_default = Roles
 openadmin_model_control_actionviewrole_default = Acciones Vista
 openadmin_model_control_entityadm_default = Entidades
 openadmin_model_control_user_default = Usuarios
+openadmin_model_control_action_default = Acciones Generales
+openadmin_model_control_classname_default = Clases
 openadmin_model_control_menuitem_custom = Pantallas
-openadmin_util_firstcontrolload_firstcontrolload_dataload = Carga permisos
+
+#openadmin_util_firstcontrolload_firstcontrolload_dataload = Carrega permissos
+openadmin_util_configuration_firstcontrolloadyaml_dataload = Carga permisos
 
 
 
